Add: mid-section style

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul class="list">
           <li>Coding Awesome UI</li>
           <li>Playing lots of video games</li>
-          <li>Game of Throne Aficionado</li>
+          <li>Game of Thrones Aficionado</li>
           <li>Creating spanish SEO content</li>
           <li> Dog Trainer</li>
         </ul>
