Add: final-section style

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <th>6</th>
           <th>Marquette Dentistry</th>
           <th>Office Manager</th>
-          <th>None</th>
+          <th>Management</th>
         </tr>
         <tr>
           <th>2</th>
